Lägg till anv och inaktivera anv

--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -129,11 +129,9 @@
                     </ListView.View>
                 </ListView>
                 <Label x:Name="lbUsers" Content="Användare:" Canvas.Left="30" Canvas.Top="29" Width="100" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" />
-                <Label x:Name="lbUsername" Content="" Canvas.Left="363" Canvas.Top="55" Background="#FFFBF8F8" Width="96"/>
                 <Label x:Name="lbUsernameLabel" Content="Användarnamn:" Canvas.Left="363" Canvas.Top="29" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                 <Label x:Name="lbPasswordLabel" Content="Lösenord:" Canvas.Left="498" Canvas.Top="29" Width="93" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                <Label x:Name="lbPassword" Content="" Canvas.Left="498" Canvas.Top="55" Width="93" Background="#FFF5EBEB"/>
-                <Button Content="Lägg till" Canvas.Left="498" Canvas.Top="213" Width="75" RenderTransformOrigin="0.5,0.5"/>
+                <Button x:Name="btnAddUser" Content="Lägg till" Canvas.Left="498" Canvas.Top="213" Width="75" RenderTransformOrigin="0.5,0.5" Click="Button_Click"/>
                 <Label Content="Chef:" Canvas.Left="366" Canvas.Top="86" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                 <Label x:Name="lbBoss" Content="" Canvas.Left="366" Canvas.Top="115" Width="62" Background="#FFFBFBFB"/>
                 <Label x:Name="lbLoggedIn" Content="Inloggad:" Canvas.Left="466" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
@@ -143,12 +141,14 @@
                 <Label x:Name="lbLastName" Content="Efternamn: " Canvas.Left="498" Canvas.Top="146" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
                 <TextBox x:Name="tbLastNamne" Height="23" Canvas.Left="498" TextWrapping="Wrap" Text="" Canvas.Top="180" Width="100" />
                 <Label x:Name="lbSSN" Content="Personnummer: " Canvas.Left="366" Canvas.Top="146" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                <TextBox Height="23" Canvas.Left="366" TextWrapping="Wrap" Text="" Canvas.Top="180" Width="119"/>
+                <TextBox x:Name="tbSsn" Height="23" Canvas.Left="366" TextWrapping="Wrap" Text="" Canvas.Top="180" Width="119"/>
                 <Label x:Name="lbEmail" Content="E-post: " Canvas.Left="363" Canvas.Top="208" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" RenderTransformOrigin="0.45,-0.379"/>
                 <TextBox x:Name="tbEmail" Height="23" Canvas.Left="366" TextWrapping="Wrap" Text="" Canvas.Top="242" Width="120"/>
                 <Button x:Name="btnUpdateInfo" Content="Uppdatera" Canvas.Left="498" Canvas.Top="242" Width="75"/>
                 <Button x:Name="btnClear" Content="Rensa" Canvas.Left="498" Canvas.Top="267" Width="75"/>
-                <Button x:Name="btnInactive" Content="Inaktivera" Canvas.Left="498" Canvas.Top="292" Width="75"/>
+                <Button x:Name="btnInactive" Content="Inaktivera" Canvas.Left="498" Canvas.Top="292" Width="75" Click="btnInactive_Click"/>
+                <TextBox x:Name="tbPassword" Height="26" Canvas.Left="498" TextWrapping="Wrap" Text="" Canvas.Top="63" Width="100"/>
+                <TextBox x:Name="tbUsername" Height="26" Canvas.Left="367" TextWrapping="Wrap" Text="" Canvas.Top="63" Width="100"/>
 
             </Canvas>
             <TabItem Header="Valutakonverterare&#xD;&#xA;" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="118" Margin="-8,0,-55,0">
