--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -57,7 +57,7 @@
                     </ListView>
                     <Button Content="Spara Kvitto
                             " Canvas.Left="38" Canvas.Top="656" Width="163" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="50,1,1,1"/>
-                    <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Left="35" Canvas.Top="578" Width="166" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
+                    <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Left="35" Canvas.Top="578" Width="166" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnUploadReceipt_Click"/>
                     <TextBox x:Name="tbReceiptFile" Height="23" Canvas.Left="35" TextWrapping="Wrap" Text="" Canvas.Top="550" Width="166" RenderTransformOrigin="0.67,0.409" Background="Black" Foreground="White"/>
                     <TextBox x:Name="tbSum" Height="23" Canvas.Left="35" TextWrapping="Wrap" Text="" Canvas.Top="630" Width="163" RenderTransformOrigin="0.5,0.5" Background="Black" Foreground="White">
                         <TextBox.RenderTransform>
@@ -113,7 +113,7 @@
                     <Label x:Name="lbValue" Content="Belopp:" Canvas.Left="207" Canvas.Top="369" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbNewValue" Content="" Canvas.Left="306" Canvas.Top="234" Width="95"/>
                     <Label x:Name="lbOldValue" Content="" Canvas.Left="317" Canvas.Top="203" Width="84"/>
-                    <TextBox x:Name="tbReceiptFile_Copy" Height="23" Canvas.Left="35" TextWrapping="Wrap" Text="" Canvas.Top="550" Width="166" RenderTransformOrigin="0.67,0.409" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="tbReceiptFile1" Height="23" Canvas.Left="35" TextWrapping="Wrap" Text="" Canvas.Top="546" Width="166" RenderTransformOrigin="0.67,0.409" Background="Black" Foreground="White"/>
                     <Label Content="            " Canvas.Left="200" Canvas.Top="456" Width="163" Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16"/>
 
 
