--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -40,10 +40,10 @@
                     <Label x:Name="lbEndDate" Content="-" Canvas.Left="317" Canvas.Top="25" Width="18" RenderTransformOrigin="0.366,0.311" Foreground="White" FontSize="16" FontWeight="Bold"/>
                     <Label x:Name="lbFreeDay" Content="Antal lediga dagar" Canvas.Left="26" Canvas.Top="54" Width="161" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <ListView/>
-                    <Label x:Name="lbCarTripLength" Content="Bilresor" Canvas.Left="26" Canvas.Top="80" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Label x:Name="lbCarTripLength" Content="Bilresor" Canvas.Left="26" Canvas.Top="116" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="38" Canvas.Top="290" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbLand" Content="Land" Canvas.Left="207" Canvas.Top="320" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <TextBox x:Name="lbCarTripLengthKm" Height="23" Canvas.Left="187" TextWrapping="Wrap" Text="Km" Canvas.Top="88" Width="102" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="lbCarTripLengthKm" Height="23" Canvas.Left="187" TextWrapping="Wrap" Text="Km" Canvas.Top="124" Width="102" Background="Black" Foreground="White"/>
                     <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan:" Canvas.Left="406" Canvas.Top="93" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
                     <TextBox x:Name="tbDoneOnTrip" Height="113" Canvas.Left="410" TextWrapping="Wrap" Text="" Canvas.Top="120" Width="214" Background="Black" Foreground="White"/>
                     <TextBox Height="23" Canvas.Left="187" TextWrapping="Wrap" Text="" Canvas.Top="60" Width="102" Background="Black" Foreground="White"/>
@@ -93,9 +93,9 @@
                     <Label x:Name="lblNotes" Content="Anteckningar:" Canvas.Left="406" Canvas.Top="246" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="410" Canvas.Top="456" Width="214" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}" Click="btnLoadNotes_Click"/>
                     <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="410" Canvas.Top="479" Width="214" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnSaveNotes_Click"/>
-                    <Label x:Name="lbTotalDriven" Content="" Canvas.Left="146" Canvas.Top="90" Width="36" RenderTransformOrigin="1.677,0.752" Background="White" Height="21"/>
+                    <Label x:Name="lbTotalDriven" Content="" Canvas.Left="146" Canvas.Top="126" Width="36" RenderTransformOrigin="1.677,0.752" Background="White" Height="21"/>
                     <Button x:Name="btnUpdateTotalDriven" Content="Uppdatera
-                            " Canvas.Left="187" Canvas.Top="116" Width="102" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1"/>
+                            " Canvas.Left="187" Canvas.Top="152" Width="102" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1"/>
                     <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="106" Canvas.Top="452" Width="69" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
                     <ComboBox x:Name="cbCurrencyCountryOne" Canvas.Left="81" Canvas.Top="207" Width="208"/>
                     <Label x:Name="lbCountryOne" Content="Från" Canvas.Left="30" Canvas.Top="201" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
@@ -114,44 +114,71 @@
                     <Label x:Name="lbNewValue" Content="" Canvas.Left="306" Canvas.Top="234" Width="95"/>
                     <Label x:Name="lbOldValue" Content="" Canvas.Left="317" Canvas.Top="203" Width="84"/>
                     <Label Content="            " Canvas.Left="200" Canvas.Top="456" Width="163" Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="187" Canvas.Top="88" Width="128"/>
 
 
                 </Canvas>
             </TabItem>
             <TabItem Header="Förskottsansökan" />
-            <TabItem Header="Chef" HorizontalAlignment="Left" Width="40" />
-            <Canvas Margin="-4,0,4,0">
-                <ListView x:Name="lvUsers" Height="136" Width="313" Canvas.Left="30" Canvas.Top="55">
+            <TabItem Header="Chef" HorizontalAlignment="Left" Width="40" >
+                <Canvas Height="836" Width="656">
+                    <ListView x:Name="lvUsers" Height="136" Width="313" Canvas.Left="30" Canvas.Top="55">
 
-                    <ListView.View>
-                        <GridView>
-                            <GridViewColumn/>
-                        </GridView>
-                    </ListView.View>
-                </ListView>
-                <Label x:Name="lbUsers" Content="Användare:" Canvas.Left="30" Canvas.Top="29" Width="100" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" />
-                <Label x:Name="lbUsernameLabel" Content="Användarnamn:" Canvas.Left="363" Canvas.Top="29" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                <Label x:Name="lbPasswordLabel" Content="Lösenord:" Canvas.Left="498" Canvas.Top="29" Width="93" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                <Button x:Name="btnAddUser" Content="Lägg till" Canvas.Left="498" Canvas.Top="213" Width="75" RenderTransformOrigin="0.5,0.5" Click="Button_Click"/>
-                <Label Content="Chef:" Canvas.Left="366" Canvas.Top="86" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                <Label x:Name="lbBoss" Content="" Canvas.Left="366" Canvas.Top="115" Width="62" Background="#FFFBFBFB"/>
-                <Label x:Name="lbLoggedIn" Content="Inloggad:" Canvas.Left="466" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                <Label x:Name="lbLoggedInUser" Content="" Canvas.Left="544" Canvas.Top="2" Width="89" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="12"/>
-                <Label x:Name="lbFirstName" Content="Förnamn:" Canvas.Left="498" Canvas.Top="86" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                <TextBox x:Name="tbFirstName" Height="26" Canvas.Left="498" TextWrapping="Wrap" Text="" Canvas.Top="115" Width="100"/>
-                <Label x:Name="lbLastName" Content="Efternamn: " Canvas.Left="498" Canvas.Top="146" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                <TextBox x:Name="tbLastNamne" Height="23" Canvas.Left="498" TextWrapping="Wrap" Text="" Canvas.Top="180" Width="100" />
-                <Label x:Name="lbSSN" Content="Personnummer: " Canvas.Left="366" Canvas.Top="146" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
-                <TextBox x:Name="tbSsn" Height="23" Canvas.Left="366" TextWrapping="Wrap" Text="" Canvas.Top="180" Width="119"/>
-                <Label x:Name="lbEmail" Content="E-post: " Canvas.Left="363" Canvas.Top="208" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" RenderTransformOrigin="0.45,-0.379"/>
-                <TextBox x:Name="tbEmail" Height="23" Canvas.Left="366" TextWrapping="Wrap" Text="" Canvas.Top="242" Width="120"/>
-                <Button x:Name="btnUpdateInfo" Content="Uppdatera" Canvas.Left="498" Canvas.Top="242" Width="75"/>
-                <Button x:Name="btnClear" Content="Rensa" Canvas.Left="498" Canvas.Top="267" Width="75"/>
-                <Button x:Name="btnInactive" Content="Inaktivera" Canvas.Left="498" Canvas.Top="292" Width="75" Click="btnInactive_Click"/>
-                <TextBox x:Name="tbPassword" Height="26" Canvas.Left="498" TextWrapping="Wrap" Text="" Canvas.Top="63" Width="100"/>
-                <TextBox x:Name="tbUsername" Height="26" Canvas.Left="367" TextWrapping="Wrap" Text="" Canvas.Top="63" Width="100"/>
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                    <Label x:Name="lbUsers" Content="Användare:" Canvas.Left="30" Canvas.Top="29" Width="100" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" />
+                    <Label x:Name="lbUsernameLabel" Content="Användarnamn:" Canvas.Left="363" Canvas.Top="29" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <Label x:Name="lbPasswordLabel" Content="Lösenord:" Canvas.Left="498" Canvas.Top="29" Width="93" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <Button x:Name="btnAddUser" Content="Lägg till" Canvas.Left="498" Canvas.Top="213" Width="75" RenderTransformOrigin="0.5,0.5" Click="Button_Click"/>
+                    <Label Content="Chef:" Canvas.Left="366" Canvas.Top="86" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <Label x:Name="lbBoss" Content="" Canvas.Left="366" Canvas.Top="115" Width="62" Background="#FFFBFBFB"/>
+                    <Label x:Name="lbLoggedIn" Content="Inloggad:" Canvas.Left="466" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <Label x:Name="lbLoggedInUser" Content="" Canvas.Left="544" Canvas.Top="2" Width="89" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="12"/>
+                    <Label x:Name="lbFirstName" Content="Förnamn:" Canvas.Left="498" Canvas.Top="86" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <TextBox x:Name="tbFirstName" Height="26" Canvas.Left="498" TextWrapping="Wrap" Text="" Canvas.Top="115" Width="100"/>
+                    <Label x:Name="lbLastName" Content="Efternamn: " Canvas.Left="498" Canvas.Top="146" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <TextBox x:Name="tbLastNamne" Height="23" Canvas.Left="498" TextWrapping="Wrap" Text="" Canvas.Top="180" Width="100" />
+                    <Label x:Name="lbSSN" Content="Personnummer: " Canvas.Left="366" Canvas.Top="146" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <TextBox x:Name="tbSsn" Height="23" Canvas.Left="366" TextWrapping="Wrap" Text="" Canvas.Top="180" Width="119"/>
+                    <Label x:Name="lbEmail" Content="E-post: " Canvas.Left="363" Canvas.Top="208" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14" RenderTransformOrigin="0.45,-0.379"/>
+                    <TextBox x:Name="tbEmail" Height="23" Canvas.Left="366" TextWrapping="Wrap" Text="" Canvas.Top="242" Width="120"/>
+                    <Button x:Name="btnUpdateInfo" Content="Uppdatera" Canvas.Left="498" Canvas.Top="242" Width="75"/>
+                    <Button x:Name="btnClear" Content="Rensa" Canvas.Left="498" Canvas.Top="267" Width="75"/>
+                    <Button x:Name="btnInactive" Content="Inaktivera" Canvas.Left="498" Canvas.Top="292" Width="75" Click="btnInactive_Click"/>
+                    <TextBox x:Name="tbPassword" Height="26" Canvas.Left="498" TextWrapping="Wrap" Text="" Canvas.Top="63" Width="100"/>
+                    <TextBox x:Name="tbUsername" Height="26" Canvas.Left="367" TextWrapping="Wrap" Text="" Canvas.Top="63" Width="100"/>
+                    <Label x:Name="lbSentInReports" Content="Rapporter: " Canvas.Left="30" Canvas.Top="274" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <TextBox x:Name="tbSentInReports" Height="178" Canvas.Left="30" TextWrapping="Wrap" Text="" Canvas.Top="308" Width="398"/>
+                    <Button x:Name="btnShowPDF" Content="Visa PDF" Canvas.Left="451" Canvas.Top="354" Width="73" RenderTransformOrigin="0.5,0.5">
+                        <Button.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform/>
+                                <SkewTransform/>
+                                <RotateTransform Angle="-0.49"/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+                        </Button.RenderTransform>
+                    </Button>
+                    <Button x:Name="btnApprove" Content="Godkänn Rapport" Canvas.Left="451" Canvas.Top="379" Width="106"/>
+                    <Button x:Name="btnDeny" Content="Neka Rapport" Canvas.Left="451" Canvas.Top="404" Width="88"/>
+                    <TextBox x:Name="tbWhyDenied" Height="39" Canvas.Left="451" TextWrapping="Wrap" Text="" Canvas.Top="447" Width="147"/>
+                    <Label x:Name="lbWhyDenied" Content="Motvering: " Canvas.Left="451" Canvas.Top="421" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <CheckBox x:Name="cbSortByDate" Content="Datum" Canvas.Left="297" Canvas.Top="278" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <CheckBox x:Name="cbSortByName" Content="Namn" Canvas.Left="368" Canvas.Top="280" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <Label Content="Sortering" Canvas.Left="216" Canvas.Top="272" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <Label x:Name="lbSearchReport" Content="Sök: " Canvas.Left="30" Canvas.Top="491" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <TextBox x:Name="tbSearchReports" Height="23" Canvas.Left="77" TextWrapping="Wrap" Text="" Canvas.Top="497" Width="120"/>
+                    <Button x:Name="btnSearchReports" Content="Sök" Canvas.Left="216" Canvas.Top="500" Width="75"/>
+                    <Label x:Name="btnSearchUser" Content="Sök: " Canvas.Left="30" Canvas.Top="196" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="14"/>
+                    <TextBox x:Name="tbSearchUser" Height="23" Canvas.Left="77" TextWrapping="Wrap" Text="" Canvas.Top="202" Width="120"/>
+                    <Button x:Name="btnSearchUser1" Content="Sök" Canvas.Left="213" Canvas.Top="205" Width="75"/>
 
-            </Canvas>
+                </Canvas>
+            </TabItem>
             <TabItem Header="Valutakonverterare&#xD;&#xA;" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="118" Margin="-8,0,-55,0">
                 <Grid x:Name="MainWindowCurrency" Background="#FFE5E5E5">
                     <ComboBox x:Name="CbFromCurrency" HorizontalAlignment="Left" Margin="180,40,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="CbFromCurrency_SelectionChanged"/>
