--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:scrumproject="clr-namespace:Scrumproject"
-        Title="MainWindow" Height="596.986" Width="664.328">
+        Title="MainWindow" Height="596.986" Width="664.328" Closing="Window_Closing">
 
     <Grid Margin="0,0,-8,0" HorizontalAlignment="Left" Width="652">
         <Grid.RowDefinitions>
@@ -13,11 +13,12 @@
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="195*"/>
-            <ColumnDefinition Width="455*"/>
+            <ColumnDefinition Width="386*"/>
+            <ColumnDefinition Width="69*"/>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <TabControl Grid.ColumnSpan="5" BorderBrush="White" Margin="0,0,0,-268" HorizontalAlignment="Left" Width="652" Height="834" VerticalAlignment="Top" Grid.RowSpan="2">
+        <TabControl Grid.ColumnSpan="6" BorderBrush="White" Margin="0,0,0,-268" HorizontalAlignment="Left" Width="652" Height="834" VerticalAlignment="Top" Grid.RowSpan="2">
             <TabControl.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
