--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -39,19 +39,18 @@
             <TabItem Header="Rapportering">
                 <Canvas Margin="13,28,223,96">
                     <DatePicker x:Name="dpStartDate" Canvas.Left="159" Canvas.Top="-13" Width="130" Height="27" Background="Black"></DatePicker>
-                    <DatePicker x:Name="dpEndDate" Canvas.Left="306" Canvas.Top="-13" Width="118" Background="Black"></DatePicker>
                     <Label x:Name="lbStartDate" Content="Start/slutdatum                            " Canvas.Left="10" Canvas.Top="-18" Width="134" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbFreeDay" Content="Antal lediga dagar" Canvas.Top="18" Width="161" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <ListView/>
-                    <Label x:Name="lbCarTripLength" Content="Bilresor" Canvas.Left="26" Canvas.Top="71" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <ListView Canvas.Top="-18"/>
+                    <Label x:Name="lbCarTripLength" Content="Bilresor" Canvas.Top="71" RenderTransformOrigin="0.362,-0.746" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="31" Canvas.Top="149" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label x:Name="lbLand" Content="Land" Canvas.Left="200" Canvas.Top="149" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <TextBox x:Name="lbCarTripLengthKm" Height="23" Canvas.Left="159" TextWrapping="Wrap" Text="Km" Canvas.Top="79" Width="102" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="TbCarTripLengthKm" Height="23" Canvas.Left="159" TextWrapping="Wrap" Text="0" Canvas.Top="79" Width="102" Background="Black" Foreground="White"/>
                     <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan:" Canvas.Left="406" Canvas.Top="18" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
                     <TextBox x:Name="tbDoneOnTrip" Height="113" Canvas.Left="410" TextWrapping="Wrap" Text="" Canvas.Top="49" Width="214" Background="Black" Foreground="White"/>
-                    <TextBox Height="23" Canvas.Left="159" TextWrapping="Wrap" Text="" Canvas.Top="25" Width="102" Background="Black" Foreground="White"/>
+                    <TextBox x:Name="TbDaysOff" Height="23" Canvas.Left="159" TextWrapping="Wrap" Text="" Canvas.Top="25" Width="102" Background="Black" Foreground="White"/>
                     <ComboBox x:Name="CbCountries" Canvas.Left="191" Canvas.Top="185" Width="120" SelectionChanged="CbCountries_SelectionChanged"/>
-                    <ListView Height="126" Canvas.Left="31" Canvas.Top="185" Width="140" Background="Black" Foreground="White">
+                    <ListView x:Name="LvDays" Height="126" Canvas.Left="31" Canvas.Top="185" Width="140" Background="Black" Foreground="White">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn/>
@@ -96,14 +95,26 @@
                     <Label x:Name="lblNotes" Content="Anteckningar:" Canvas.Left="410" Canvas.Top="167" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="410" Canvas.Top="383" Width="214" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}" Click="btnLoadNotes_Click"/>
                     <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="414" Canvas.Top="406" Width="214" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Click="btnSaveNotes_Click"/>
-                    <Label x:Name="lbTotalDriven" Content="" Canvas.Left="108" Canvas.Top="79" Width="36" RenderTransformOrigin="1.677,0.752" Background="White" Height="21"/>
                     <Button x:Name="btnUpdateTotalDriven" Content="Uppdatera
-                            " Canvas.Left="159" Canvas.Top="107" Width="102" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1"/>
+                            " Canvas.Left="159" Canvas.Top="126" Width="102" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1" Click="btnUpdateTotalDriven_Click"/>
                     <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="108" Canvas.Top="329" Width="69" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
                     <TextBox x:Name="tbValue" Height="23" Canvas.Left="191" TextWrapping="Wrap" Text="" Canvas.Top="246" Width="120" Background="White"/>
                     <Label x:Name="lbValue" Content="Belopp:" Canvas.Left="191" Canvas.Top="212" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label Content="            " Canvas.Left="200" Canvas.Top="309" Width="163" Name="LbTraktamente" Foreground="White" FontWeight="Bold" FontSize="16"/>
-                    <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="159" Canvas.Top="54" Width="128"/>
+                    <Button x:Name="btnUpdateList" Content="Uppdatera Daglista" Canvas.Left="159" Canvas.Top="54" Width="128" Click="btnUpdateList_Click"/>
+                    <TextBox x:Name="TbTotalKm" Height="23" Canvas.Left="159" TextWrapping="Wrap" Text="0" Canvas.Top="102" Width="102"/>
+                    <Label x:Name="LbKm" Content="Km" Canvas.Left="98" Canvas.Top="71" Foreground="#FF51FF00"/>
+                    <Label x:Name="LbTotalKm" Content="Summering Km" Canvas.Left="52" Canvas.Top="99" Foreground="#FF56FF07"/>
+                    <DatePicker x:Name="dpEndDate" Canvas.Left="303" Canvas.Top="-14" RenderTransformOrigin="0.5,0.5">
+                        <DatePicker.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform/>
+                                <SkewTransform/>
+                                <RotateTransform Angle="0.517"/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+                        </DatePicker.RenderTransform>
+                    </DatePicker>
 
 
                 </Canvas>
