--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:scrumproject="clr-namespace:Scrumproject"
-        Title="MainWindow" Height="596.986" Width="664.328">
+        Title="MainWindow" Height="596.986" Width="664.328" Closing="Window_Closing_1">
 
     <Grid Margin="0,0,-8,0" HorizontalAlignment="Left" Width="652">
         <Grid.RowDefinitions>
