--- a/Scrumproject/GUI/LoginWindow.xaml
+++ b/Scrumproject/GUI/LoginWindow.xaml
@@ -9,6 +9,7 @@
         <Label x:Name="LbPassword" Content="Lösenord" HorizontalAlignment="Left" Margin="59,108,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="TbUsername" HorizontalAlignment="Left" Height="23" Margin="70,59,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="TbPassword" HorizontalAlignment="Left" Height="23" Margin="70,134,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="lbError" Content="" HorizontalAlignment="Left" Margin="22,162,0,0" VerticalAlignment="Top" Height="41" Width="254"/>
 
     </Grid>
 </Window>
