--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:scrumproject="clr-namespace:Scrumproject"
-        Title="MainWindow" Height="864.15" Width="750.896" Closing="Window_Closing_1">
+        Title="MainWindow" Height="913.404" Width="828.508" Closing="Window_Closing_1">
 
     <Grid Margin="0,0,-8,0" HorizontalAlignment="Left" Width="652">
         <Grid.RowDefinitions>
@@ -12,12 +12,13 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition Width="0*"/>
-            <ColumnDefinition Width="195*"/>
+            <ColumnDefinition Width="36*"/>
+            <ColumnDefinition Width="159*"/>
             <ColumnDefinition Width="455*"/>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <TabControl Grid.ColumnSpan="6" BorderBrush="White" Margin="0,0,-97,-3" HorizontalAlignment="Left" Width="749" Height="836" VerticalAlignment="Top" Grid.RowSpan="2" SelectionChanged="TabControl_SelectionChanged">
+        <TabControl Grid.ColumnSpan="7" BorderBrush="Black" Margin="-1,0,-172,0" HorizontalAlignment="Left" Width="825" Height="898" VerticalAlignment="Top" Grid.RowSpan="2" SelectionChanged="TabControl_SelectionChanged">
             <TabControl.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
@@ -36,7 +37,7 @@
                     <GradientStop Color="#FFD1BBBB" Offset="1"/>
                 </LinearGradientBrush>
             </TabControl.OpacityMask>
-            <TabItem Header="Rapportering">
+            <TabItem Header="Rapportering" Margin="-2,-2,-89,0" Background="White" Foreground="Black" BorderBrush="{x:Null}">
                 <Canvas Margin="13,28,223,96">
                     <DatePicker x:Name="dpStartDate" Canvas.Left="191" Canvas.Top="-9" Width="108" Height="27" Background="Black"></DatePicker>
                     <Label x:Name="lbStartDate" Content="Välj start/slutdatum                            " Canvas.Top="-9" Width="167" Foreground="White" Background="{x:Null}" FontWeight="Bold" FontSize="16"/>
@@ -101,8 +102,8 @@
 
                 </Canvas>
             </TabItem>
-            <TabItem Header="Förskottsansökan" Margin="0,-2,-4,-1" />
-            <TabItem Header="Chef" HorizontalAlignment="Left" Width="40" Margin="0,-2,0,0" >
+            <TabItem Header="Förskottsansökan" Margin="82,-2,-82,1" Background="White" Foreground="Black" Width="182" Height="63" />
+            <TabItem Header="Chef" HorizontalAlignment="Left" Width="182" Margin="78,-2,-78,2" Background="White" BorderBrush="{x:Null}" Foreground="Black" Cursor="None" Height="63" >
                 <Canvas Height="836" Width="656">
                     <ListView x:Name="lvUsers" Height="136" Width="313" Canvas.Left="30" Canvas.Top="55" SelectionChanged="lvUsers_SelectionChanged_1">
 
@@ -163,7 +164,7 @@
 
                 </Canvas>
             </TabItem>
-            <TabItem Header="Valutakonverterare&#xD;&#xA;" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="118" Margin="0">
+            <TabItem Header="Valutakonverterare&#xD;&#xA;" HorizontalAlignment="Left" Height="63" VerticalAlignment="Bottom" Width="182" Margin="68,-2,-68,2" Padding="6,12,6,2" Background="White" Foreground="Black">
                 <Grid x:Name="MainWindowCurrency" Background="#FFE5E5E5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="268*"/>
